--- a/css/Style.css
+++ b/css/Style.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,600,700');
+
 body, html {
     height: 100%;
     margin: 0;
@@ -10,8 +14,72 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     letter-spacing: 0.5px;
-    background: #000;
+    background: rgb(0, 0, 0);
 }
+
+img {
+    height: auto;
+    max-width: 100%;
+    border: none;
+    outline: none;
+    transition: all 0.4s ease 0s;
+    -moz-transition: all 0.4s ease 0s;
+    -webkit-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+}
+
+/* ----------------------------------------------
+	 Utilidades
+----------------------------------------------- */
+.mt_10{
+    margin-top: 10px;
+}
+.mt_40{
+    margin-top: 40px;
+}
+
+.mtb_40 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+ul li {
+    list-style: none;
+}
+
+.pull-left {
+    float: left !important;
+}
+
+.pull-right {
+    float: right !important;
+}
+
+
+
+
+
+
+/* ----------------------------------------------
+	 Cabecera
+----------------------------------------------- */
+
+@media (max-width: 767px){
+    .hidden-xs {
+    display: none !important;
+}
+}
+
+@media (max-width: 991px) and (min-width: 768px){
+.hidden-sm {
+    display: none !important;
+}}
+
+@media (max-width: 1199px) and (min-width: 992px){
+.hidden-md {
+    display: none !important;
+}}
+
 
 .cabecera_arriba {
     font-size: 13px;
@@ -37,4 +105,262 @@ body {
 .cabecera-arriba-izquierda li, .cabecera-arriba-dere li {
     display: inline;
     cursor: pointer;
+}
+
+/* ----------------------------------------------
+	 Cabecera Principal
+----------------------------------------------- */
+
+.buscador {
+    margin-bottom: 0;
+    width: 220px;
+    position: relative;
+}
+
+.buscador .input-lg {
+    height: 40px;
+    line-height: 20px;
+    padding: 0 40px 0 10px;
+    border: none;
+    border-radius: 0;
+    border: 1px solid #424242;
+    background-color: #000;
+}
+
+
+
+.buscador .boton-busqueda {
+    display: block;
+    height: 33px;
+    position: absolute;
+    right: 0;
+    top: 3px;
+    width: 40px;
+}
+
+.buscador .btn-lg {
+    font-size: 16px;
+    line-height: 18px;
+    padding: 8px 13px;
+    margin: 0;
+    border: none;
+    color: #192e3f;
+    background-color: transparent;
+}
+
+.btn {
+    background: #424242 none repeat scroll 0 0;
+    border-radius: 0;
+    color: #fff;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-weight: 500;
+}
+
+.buscador span button i{
+
+    color: white;
+
+}
+
+.buscador span button i:hover{
+
+    color: orange;
+
+}
+
+/* ----------------------------------------------
+	 Cabecera central
+----------------------------------------------- */
+
+.navbar-cabeza {
+    text-align: center;
+}
+
+.navbar-cabeza .navbar-brand {
+    height: auto;
+}
+
+.navbar-brand {
+    padding: 33px 0;
+    display: inline-block;
+    float: none;
+}
+.navbar-header .navbar-brand {
+    height: auto;
+}
+
+/* ----------------------------------------------
+	 Carro
+----------------------------------------------- */
+#div-carro>.btn {
+    background: url(../img/sprite.png) no-repeat scroll -15px -102px;
+    line-height: 20px;
+    color: #fff;
+    padding: 0 0 0 48px;
+    border: none;
+    border-radius: 0;
+    float: right;
+}
+
+#div-carro>.btn:hover {
+    background-position: -15px -152px;
+}
+
+#div-carro .boton-sin-outline {
+    outline: none;
+}
+
+#carrito-compra {
+    float: left;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 19px;
+    text-transform: uppercase;
+}
+
+#carrito-total {
+    clear: left;
+    float: left;
+}
+
+#dropdown-carrito {
+    background: #fff none repeat scroll 0 0;
+    border: 1px solid #e5e5e5;
+    min-width: 285px;
+    position: absolute;
+    right: 0;
+    top: 90px;
+    z-index: 3;
+}
+
+#dropdown-carrito ul {
+    padding: 20px;
+    display: inline-table;
+}
+
+#dropdown-carrito .table>tbody>tr>td {
+    padding: 10px 0;
+}
+
+#dropdown-carrito .product-name {
+    min-width: 160px;
+    padding-left: 10px !important;
+}
+
+#dropdown-carrito .price {
+    display: block;
+    font-size: 14px;
+}
+
+#dropdown-carrito .cart-qty {
+    margin-top: 5px;
+    padding: 5px 8px;
+    width: 60px;
+}
+
+/* ----------------------------------------------
+	 Dropdown-menu
+----------------------------------------------- */
+
+.dropdown-menu {
+    background-clip: padding-box;
+    background-color: #424242;
+    border: none;
+    border-radius: 0px;
+    box-shadow: none;
+    margin: 11px 0 0;
+    padding: 15px;
+}
+
+.dropdown-menu > li > a {
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+
+.dropdown-menu>li>a {
+    color: #fff;
+    padding: 5px 15px;
+}
+
+.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
+    background-color: #fa4251;
+    color: rgb(255, 255, 255);
+}
+
+/* ----------------------------------------------
+	 Tipografia 
+----------------------------------------------- */
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: #9E9E9E;
+    transition: all 0.25s ease 0s;
+    -moz-transition: all 0.25s ease 0s;
+    -webkit-transition: all 0.25s ease 0s;
+    -o-transition: all 0.25s ease 0s;
+}
+a:hover, a:focus {
+    color: rgb(255, 145, 0);
+    text-decoration: none;
+    transition: all 0.25s ease 0s;
+    -moz-transition: all 0.25s ease 0s;
+    -webkit-transition: all 0.25s ease 0s;
+    -o-transition: all 0.25s ease 0s;
+}
+a, a:focus, a:active, a:link, img {
+    outline: none;
+    text-decoration: none;
+}
+a.active {
+    color: #000;
+}
+p {
+    margin: 0;
+    padding: 0;
+}
+h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+h1 {
+    font-size: 36px;
+    line-height: 42px;
+}
+h2 {
+    font-size: 30px;
+    line-height: 36px;
+}
+h3 {
+    font-size: 22px;
+    line-height: 26px;
+}
+h4 {
+    font-size: 18px;
+    line-height: 22px;
+}
+h5 {
+    font-size: 16px;
+    line-height: 20px;
+}
+h6 {
+    font-size: 14px;
+    line-height: 18px;
+}
+.uppr {
+    text-transform: uppercase;
+}
+.lower {
+    text-transform: lowercase;
+}
+.capitalize {
+    text-transform: capitalize;
 }
