--- a/css/Style.css
+++ b/css/Style.css
@@ -293,6 +293,48 @@ ul li {
     color: rgb(255, 255, 255);
 }
 
+
+/* ----------------------------------------------
+	 Nav Bar
+----------------------------------------------- */
+
+ #menu_nav>li>a {
+    padding: 22px 18px;
+    border-radius: 0;
+    overflow: hidden;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 14px;
+}
+
+#menu_nav{
+    height: 64px;
+    text-align: center;
+    width: 100%;
+}
+
+.navbar-nav>li>a {
+    font-weight: 500;
+}
+
+#menu_nav>li>a:hover, #menu_nav>li>a:focus {
+    background-color: #fa4251;
+    color: #fff;
+}
+
+.nav1{
+    background-color: #424242;
+}
+
+
+
+
+
+
+
+
+
+
 /* ----------------------------------------------
 	 Tipografia 
 ----------------------------------------------- */
@@ -364,3 +406,6 @@ h6 {
 .capitalize {
     text-transform: capitalize;
 }
+
+
+
