--- a/css/home.css
+++ b/css/home.css
@@ -13,12 +13,12 @@ body, html {
     padding: 0;
 }
 body {
-    line-height: 24px;
+    line-height: 2.4rem;
     color: #9E9E9E;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.05rem;
     background: #F2EFEA;
 }
 
@@ -37,15 +37,15 @@ img {
 	 Utilidades
 ----------------------------------------------- */
 .mt_10{
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 .mt_40{
-    margin-top: 40px;
+    margin-top: 4rem;
 }
 
 .mtb_40 {
-    margin-top: 40px;
-    margin-bottom: 40px;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 ul li {
@@ -61,7 +61,7 @@ ul li {
 }
 
 .color-fondo{
-    background-color: #F2EFEA;
+    background-color: #9a884b;
 }
 
 .color_negro{
@@ -90,14 +90,14 @@ ul li {
 
 
 .cabecera_arriba {
-    font-size: 13px;
-    border-bottom: 1px solid #424242;
+    font-size: 1.3rem;
+    border-bottom: 0.1rem solid #424242;
     color: #ccc;
     font-weight: 500;
 }
 
 .cabecera-arriba-izquierda, .cabecera-arriba-dere {
-    margin: 8px 0;
+    margin: 0.8rem 0;
 }
 
 .cabecera_arriba a {
@@ -106,8 +106,8 @@ ul li {
 }
 
 .cabecera-arriba-izquierda>li, .cabecera-arriba-dere>li {
-    padding: 0 10px;
-    line-height: 11px;
+    padding: 0 1rem;
+    line-height: 1.1rem;
 }
 
 .cabecera-arriba-izquierda li, .cabecera-arriba-dere li {
@@ -130,7 +130,7 @@ ul li {
 }
 
 .logo-link {
-    padding: 33px 0;
+    padding: 3.3rem 0;
     display: inline-block;
     float: none;
 }
@@ -142,28 +142,28 @@ ul li {
 	 Carro
 ----------------------------------------------- */
 #div-carro>.btn {
-    background: url(../img/sprite.png) no-repeat scroll -15px -102px;
-    line-height: 20px;
-    color: #fff;
-    padding: 0 0 0 48px;
+    background: url(../img/sprite2.png) no-repeat scroll -1.5rem -10.2rem;
+    line-height: 2rem;
+    color: black;
+    padding: 0 0 0 4.8rem;
     border: none;
     border-radius: 0;
     float: right;
-    outline:none !important;
+    outline:0rem !important;
     outline-width: 0 !important;
 }
 
 #div-carro>.btn:hover {
-    background-position: -15px -152px;
+    background-position: -1.5rem -15.2rem;
+    
 }
-
 
 
 #carrito-compra {
     float: left;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 700;
-    line-height: 19px;
+    line-height: 1.9rem;
     text-transform: uppercase;
 }
 
@@ -174,32 +174,32 @@ ul li {
 
 #dropdown-carrito {
     background: #fff;
-    border: 1px solid #e5e5e5;
-    min-width: 185px;
-    max-width: 300px;
+    border: 0.1rem solid #e5e5e5;
+    min-width: 18.5rem;
+    max-width: 30rem;
     position: absolute;
     right: 10;
-    top: 90px;
-    z-index: 3;
+    top: 9rem;
+    z-index: 50;
 }
 
 #dropdown-carrito ul {
-    padding: 20px;
+    padding: 2rem;
     display: inline-table;
 }
 
 #dropdown-carrito .table>tbody>tr>td {
-    padding: 10px 0;
+    padding: 1rem 0;
 }
 
 #dropdown-carrito .nombre-producto {
-    min-width: 160px;
-    padding-left: 10px !important;
+    min-width: 16rem;
+    padding-left: 1rem !important;
 }
 
 #dropdown-carrito .precio {
     display: block;
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 #dropdown-carrito .cant-carro {
@@ -209,8 +209,8 @@ ul li {
 }
 
 .btn {
-    background:transparent;
-    /*background: #424242 none repeat scroll 0 0;*/
+   
+    background: #424242 none repeat scroll 0 0;
     border-radius: 0;
     color: #fff;
     padding: 1rem 2rem;
@@ -229,10 +229,10 @@ ul li {
     background-clip: padding-box;
     background-color: #424242;
     border: none;
-    border-radius: 0px;
+    border-radius: 0rem;
     box-shadow: none;
-    margin: 11px 0 0;
-    padding: 15px;
+    margin: 1.1rem 0 0;
+    padding: 1.5rem;
 }
 
 
@@ -242,10 +242,10 @@ ul li {
 ----------------------------------------------- */
 .nav1{
     background-color: #424242;
-    height: 65px;
+    height: 6.5rem;
 }
 
-@media only screen and (max-width: 776px) {
+@media only screen and (max-width: 77.6rem) {
     .nav1{
         background-color: #424242;
         height: 100%;
@@ -253,26 +253,26 @@ ul li {
 }
 
 .menu{
-    font-size: 20px;
+    font-size: 2rem;
     color: white;
     font-weight: 500;
-    margin-left: 50px;
+    margin-left: 5rem;
 }
 
 
-@media (min-width: 800px){
+@media (min-width: 80rem){
     .menu {
     display: none !important;
 }
 }
 
  .nav1 .div-nav .opciones li a {
-    padding: 22px 18px;
+    padding: 2.2rem 1.8rem;
     border-radius: 0;
     overflow: hidden;
     color: #fff;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 1.8rem;
     
 }
 
@@ -314,23 +314,23 @@ ul li {
 }
 .nav1 form {
 
-        height: 40px;
-        line-height: 20px;
-        padding: 0 0px 0 10px;
+        height: 4rem;
+        line-height: 2rem;
+        padding: 0 0px 0 1rem;
         border: none;
-        font-size: 15px;
+        font-size: 1.5rem;
         color: white;
         border-radius: 0;
-        border-bottom: 1px solid white; 
+        border-bottom: 0.1rem solid white; 
         background-color: rgba(14, 9, 9, 0);
         outline: 0px !important; 
 
     }
 
     .nav1 form input{
-        height: 40px;
-        line-height: 20px;
-        padding: 0 0px 0 10px;
+        height: 4rem;
+        line-height: 2rem;
+        padding: 0 0px 0 1rem;
         border: none;
         font-size: 2rem;
         border-radius: 0; 
@@ -360,8 +360,10 @@ input:focus, input.form-control:focus {
 }
 
 a.text-hover-dark, .text-dark{
-    font-size: 1.8rem;
+    font-size: 1.9rem;
 }
+
+
 
 a.text-hover-dark:focus, a.text-hover-dark:hover {
     color: #212529 !important;
@@ -393,9 +395,9 @@ a.text-hover-dark:focus, a.text-hover-dark:hover {
 
 .product-badge {
     position: absolute;
-    top: 15px;
-    left: 25px;
-    padding: 5px 8px;
+    top: 1.5rem;
+    left: 2.5rem;
+    padding: 0.5rem 0.8rem;
     z-index: 20;
 }
 
@@ -520,28 +522,28 @@ h1, h2, h3, h4, h5, h6, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
     margin-bottom: 0px;
 }
 h1 {
-    font-size: 36px;
-    line-height: 42px;
+    font-size: 3.6rem;
+    line-height: 4.2rem;
 }
 h2 {
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 3rem;
+    line-height: 3.6rem;
 }
 h3 {
-    font-size: 22px;
-    line-height: 26px;
+    font-size: 2.2rem;
+    line-height: 2.6rem;
 }
 h4 {
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 1.8rem;
+    line-height: 2.2rem;
 }
 h5 {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 1.6rem;
+    line-height: 2rem;
 }
 h6 {
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
 }
 .uppr {
     text-transform: uppercase;
