--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700');
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,600,700');
 
@@ -112,7 +111,7 @@ ul li {
     color: white;
     font-weight: 600;
     font-size: 1.5rem;
-    
+
 }
 
 .cabecera-arriba-izquierda>li, .cabecera-arriba-dere>li {
@@ -165,7 +164,7 @@ ul li {
 
 #div-carro>.btn:hover {
     background-position: -1.5rem -15.2rem;
-    
+
 }
 
 
@@ -219,7 +218,7 @@ ul li {
 }
 
 .btn {
-   
+
     background: #424242 none repeat scroll 0 0;
     border-radius: 0;
     color: #fff;
@@ -255,7 +254,7 @@ ul li {
     height: 6.5rem;
 }
 
-@media only screen and (max-width: 77.6rem) {
+@media only screen and (max-width: 720px) {
     .nav1{
         background-color: #424242;
         height: 100%;
@@ -270,7 +269,7 @@ ul li {
 }
 
 
-@media (min-width: 80rem){
+@media (min-width: 780px){
     .menu {
     display: none !important;
 }
@@ -283,12 +282,12 @@ ul li {
     color: #fff;
     text-transform: uppercase;
     font-size: 1.8rem;
-    
+
 }
 
 .nav1 .div-nav .opciones{
     height: 100%;
-   
+
 }
 
 .nav1 .div-nav .opciones .activo a {
@@ -331,9 +330,9 @@ ul li {
         font-size: 1.5rem;
         color: white;
         border-radius: 0;
-        border-bottom: 0.1rem solid white; 
+        border-bottom: 0.1rem solid white;
         background-color: rgba(14, 9, 9, 0);
-        outline: 0px !important; 
+        outline: 0px !important;
 
     }
 
@@ -343,9 +342,9 @@ ul li {
         padding: 0 0px 0 0rem;
         border: none;
         font-size: 2rem;
-        border-radius: 0; 
+        border-radius: 0;
         background-color: rgba(14, 9, 9, 0) !important;
-        outline: none !important; 
+        outline: none !important;
         color: white !important;
 
 }
@@ -429,7 +428,7 @@ a.text-hover-dark:focus, a.text-hover-dark:hover {
     border-radius: 0;
     }
 
-   
+
 
  /* ----------------------------------------------
 	 Cambio de imagen
@@ -495,7 +494,7 @@ img {
 
 
 /* ----------------------------------------------
-	 Tipografia 
+	 Tipografia
 ----------------------------------------------- */
 
 a {
@@ -565,20 +564,3 @@ h6 {
 .capitalize {
     text-transform: capitalize;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
